--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
-project(Magma_1 C)
-
-set(CMAKE_C_STANDARD 11)
+project(Magma_1)
 
 add_executable(Magma_1 main.c)
