--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
 project(Magma_1)
 
-add_executable(Magma main.c)
-add_executable(MagmaTest test.c)
+add_executable(Magma main.c array.c array.h lang.c lang.h)
+add_executable(MagmaTest test.c array.c array.h lang.c lang.h)
