--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 project(Magma)
 
-add_executable(Main main.c main.c)
-add_executable(Test test.c test.c)
+add_executable(Main main.c main.c system.c system.h)
+add_executable(Test test.c test.c assert.c assert.h system.c system.h)
